[package]
name = "ena"
description = "Union-find, congruence closure, and other unification code. Based on code from rustc."
license = "MIT/Apache-2.0"
homepage = "https://github.com/nikomatsakis/ena"
repository = "https://github.com/nikomatsakis/ena"
version = "0.7.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]

[features]
congruence-closure = [ "petgraph" ]
bench = [ ]

[dependencies]
log = "0.3"
petgraph = { version = "0.4.5", optional = true }